fix overflow issue firefox

--- a/.scss/style.scss
+++ b/.scss/style.scss
@@ -63,7 +63,6 @@ body {
 }
 
 .background-size-full {
-  display: table;
   height: 100%;
   max-height: 900px;
   background-color: #191918;
